Final css style and html change

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -22,6 +22,7 @@ h2 {
     background: #ffc107;
     border: 10px solid orange;
     border-style: groove;
+    color: #e91e63;
 }
 
 img {
@@ -33,4 +34,17 @@ h3 {
     background: #ffeb3b;
     border: 10px solid orange;
     border-style: groove;
+    color: blueviolet;
 }
+
+/* Requirements:
+
+Place the existing <h1> and <p> inside of a header element 
+and add a background-color to that header.
+Create a stylesheet.css file and import it into the index.html file.
+Add a new div with a class name of "info". Inside that div add an <h2> 
+My name is YOUR NAME </h2> Add a background-color and a text color of your choice.
+Add an image tag <img> and source an image of your main mode of transportation 
+(you car, bus, scooter, bike, feet, etc)
+Add an <h3> that explains your mode of transportation. 
+Add a background-color and a text color of your choice. */
